--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <br>
     <div class="home-buttons">
       <a href="#projects" class="btn">Explore My Work</a>
-      <a href="Aditya_agrawalResume (2).pdf" download class="btn secondary-btn">Download Resume</a>
+      <a href="Aditya_AgrawalResume.pdf" download class="btn secondary-btn">Download Resume</a>
     </div>
   </div>
 </section>
